Fix Bug 328777 - Photo search for contact email should be case-insensitive

FIXED-IN: 4.12.1
BUG: 328777